--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <section class="CheckBox">
     <h1>Inicia Sesion</h1>
-    <form method="post" name="authentication" id="authentication" class="authentication">
+    <form name="authentication" id="authentication" class="authentication">
         <label for="username">Ingresa tu usuario :</label>
         <br>
         <input class="campos" type="text" name="username" id="username" minlength="3" maxlenth="15" pattern="[a-zA-Z0-9]+" required>
